# mypyc-demo

./: README.md  Taskfile.yml  hello.py  pyproject.toml  setup.py
fib/: __init__.py  fibfunc.py
